--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </header>
     <main>
         <section>
-            <img src="" alt="">
+            <video src="./resources/images-videos/excursion.mp4" controls autoplay loop>Video not supported</video>
             <h2>Your Personal Travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         </section>
         <section>
-            <i></i>
-            <img src="" alt="">
+            <p><img src="./resources/images-videos/landscape.webp" alt="Camp on the top of a hacking trail" class="width"></p>
+            <p><img src="./resources/images-videos/phone-icon.webp" alt="phone-icon"></p>
             <h2>Coming Soon For iphone and Android</h2>
             <a href="">Download Excursion (coming soon)</a>
             <br><br>
